--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Foodee &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>Foodee &mdash; 100% Free Fully Responsive HTML5 Template by rightbros.co</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
+	<meta name="description" content="Free HTML5 Template by rightbros.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FREEHTML5.CO" />
+	<meta name="author" content="rightbros.CO" />
 
 
   	<!-- Facebook and Twitter integration -->
@@ -66,7 +66,7 @@
 					<div class="container">
 						<div class="row">
 							<h1 class="to-animate">foodee</h1>
-							<h2 class="to-animate">Lovely Designed <span>by</span> <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
+							<h2 class="to-animate">Lovely Designed <span>by</span> <a href="http://rightbros.co/" target="_blank">rightbros.co</a></h2>
 						</div>
 					</div>
 				</div>
@@ -268,7 +268,7 @@
 								<li>
 									<div class="fh5co-food-desc">
 										<figure>
-											<img src="images/res_img_5.jpg" class="img-responsive" alt="Free HTML5 Templates by FREEHTML5.co">
+											<img src="images/res_img_5.jpg" class="img-responsive" alt="Free HTML5 Templates by rightbros.co">
 										</figure>
 										<div>
 											<h3>Pineapple Juice</h3>
@@ -282,7 +282,7 @@
 								<li>
 									<div class="fh5co-food-desc">
 										<figure>
-											<img src="images/res_img_6.jpg" class="img-responsive" alt="Free HTML5 Templates by FREEHTML5.co">
+											<img src="images/res_img_6.jpg" class="img-responsive" alt="Free HTML5 Templates by rightbros.co">
 										</figure>
 										<div>
 											<h3>Green Juice</h3>
@@ -296,7 +296,7 @@
 								<li>
 									<div class="fh5co-food-desc">
 										<figure>
-											<img src="images/res_img_7.jpg" class="img-responsive" alt="Free HTML5 Templates by FREEHTML5.co">
+											<img src="images/res_img_7.jpg" class="img-responsive" alt="Free HTML5 Templates by rightbros.co">
 										</figure>
 										<div>
 											<h3>Soft Drinks</h3>
@@ -310,7 +310,7 @@
 								<li>
 									<div class="fh5co-food-desc">
 										<figure>
-											<img src="images/res_img_5.jpg" class="img-responsive" alt="Free HTML5 Templates by FREEHTML5.co">
+											<img src="images/res_img_5.jpg" class="img-responsive" alt="Free HTML5 Templates by rightbros.co">
 										</figure>
 										<div>
 											<h3>Carlo Rosee Drinks</h3>
@@ -331,7 +331,7 @@
 								<li>
 									<div class="fh5co-food-desc">
 										<figure>
-											<img src="images/res_img_3.jpg" class="img-responsive" alt="Free HTML5 Templates by FREEHTML5.co">
+											<img src="images/res_img_3.jpg" class="img-responsive" alt="Free HTML5 Templates by rightbros.co">
 										</figure>
 										<div>
 											<h3>Beef Steak</h3>
@@ -345,7 +345,7 @@
 								<li>
 									<div class="fh5co-food-desc">
 										<figure>
-											<img src="images/res_img_4.jpg" class="img-responsive" alt="Free HTML5 Templates by FREEHTML5.co">
+											<img src="images/res_img_4.jpg" class="img-responsive" alt="Free HTML5 Templates by rightbros.co">
 										</figure>
 										<div>
 											<h3>Tomato with Chicken</h3>
@@ -359,7 +359,7 @@
 								<li>
 									<div class="fh5co-food-desc">
 										<figure>
-											<img src="images/res_img_2.jpg" class="img-responsive" alt="Free HTML5 Templates by FREEHTML5.co">
+											<img src="images/res_img_2.jpg" class="img-responsive" alt="Free HTML5 Templates by rightbros.co">
 										</figure>
 										<div>
 											<h3>Sausages from Italy</h3>
@@ -373,7 +373,7 @@
 								<li>
 									<div class="fh5co-food-desc">
 										<figure>
-											<img src="images/res_img_8.jpg" class="img-responsive" alt="Free HTML5 Templates by FREEHTML5.co">
+											<img src="images/res_img_8.jpg" class="img-responsive" alt="Free HTML5 Templates by rightbros.co">
 										</figure>
 										<div>
 											<h3>Beef Grilled</h3>
@@ -394,7 +394,7 @@
 								<li>
 									<div class="fh5co-food-desc">
 										<figure>
-											<img src="images/res_img_5.jpg" class="img-responsive" alt="Free HTML5 Templates by FREEHTML5.co">
+											<img src="images/res_img_5.jpg" class="img-responsive" alt="Free HTML5 Templates by rightbros.co">
 										</figure>
 										<div>
 											<h3>Pineapple Juice</h3>
@@ -408,7 +408,7 @@
 								<li>
 									<div class="fh5co-food-desc">
 										<figure>
-											<img src="images/res_img_6.jpg" class="img-responsive" alt="Free HTML5 Templates by FREEHTML5.co">
+											<img src="images/res_img_6.jpg" class="img-responsive" alt="Free HTML5 Templates by rightbros.co">
 										</figure>
 										<div>
 											<h3>Green Juice</h3>
@@ -422,7 +422,7 @@
 								<li>
 									<div class="fh5co-food-desc">
 										<figure>
-											<img src="images/res_img_7.jpg" class="img-responsive" alt="Free HTML5 Templates by FREEHTML5.co">
+											<img src="images/res_img_7.jpg" class="img-responsive" alt="Free HTML5 Templates by rightbros.co">
 										</figure>
 										<div>
 											<h3>Soft Drinks</h3>
@@ -436,7 +436,7 @@
 								<li>
 									<div class="fh5co-food-desc">
 										<figure>
-											<img src="images/res_img_5.jpg" class="img-responsive" alt="Free HTML5 Templates by FREEHTML5.co">
+											<img src="images/res_img_5.jpg" class="img-responsive" alt="Free HTML5 Templates by rightbros.co">
 										</figure>
 										<div>
 											<h3>Carlo Rosee Drinks</h3>
@@ -457,7 +457,7 @@
 								<li>
 									<div class="fh5co-food-desc">
 										<figure>
-											<img src="images/res_img_3.jpg" class="img-responsive" alt="Free HTML5 Templates by FREEHTML5.co">
+											<img src="images/res_img_3.jpg" class="img-responsive" alt="Free HTML5 Templates by rightbros.co">
 										</figure>
 										<div>
 											<h3>Beef Steak</h3>
@@ -471,7 +471,7 @@
 								<li>
 									<div class="fh5co-food-desc">
 										<figure>
-											<img src="images/res_img_4.jpg" class="img-responsive" alt="Free HTML5 Templates by FREEHTML5.co">
+											<img src="images/res_img_4.jpg" class="img-responsive" alt="Free HTML5 Templates by rightbros.co">
 										</figure>
 										<div>
 											<h3>Tomato with Chicken</h3>
@@ -485,7 +485,7 @@
 								<li>
 									<div class="fh5co-food-desc">
 										<figure>
-											<img src="images/res_img_2.jpg" class="img-responsive" alt="Free HTML5 Templates by FREEHTML5.co">
+											<img src="images/res_img_2.jpg" class="img-responsive" alt="Free HTML5 Templates by rightbros.co">
 										</figure>
 										<div>
 											<h3>Sausages from Italy</h3>
@@ -499,7 +499,7 @@
 								<li>
 									<div class="fh5co-food-desc">
 										<figure>
-											<img src="images/res_img_8.jpg" class="img-responsive" alt="Free HTML5 Templates by FREEHTML5.co">
+											<img src="images/res_img_8.jpg" class="img-responsive" alt="Free HTML5 Templates by rightbros.co">
 										</figure>
 										<div>
 											<h3>Beef Grilled</h3>
@@ -577,8 +577,8 @@
 								5555 Love Paradise 56 New Clity 5655, <br>Excel Tower United Kingdom
 							</li>
 							<li><i class="icon-phone"></i> (123) 465-6789</li>
-							<li><i class="icon-envelope"></i>info@freehtml5.co</li>
-							<li><i class="icon-globe"></i> <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></li>
+							<li><i class="icon-envelope"></i>info@rightbros.co</li>
+							<li><i class="icon-globe"></i> <a href="http://rightbros.co/" target="_blank">rightbros.co</a></li>
 						</ul>
 					</div>
 					<div class="col-md-6 to-animate-2">
